# pix-framework

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yaml
src/batch_processing_discovery/: README.md  __init__.py  features_table.py
src/case_attribute_discovery/: config.py  discovery.py
src/pix_framework/: __init__.py  input.py  log_ids.py
src/pix_framework/calendar/: __init__.py  availability.py  fuzzy_resource_calendar.py  resource_calendar.py
src/pix_framework/discovery/: calendar_discovery_parameters.py  calendar_factory.py  case_arrival.py  gateway_probabilities.py  resource_activity_performances.py  resource_calendars.py  resource_model.py  resource_pools.py  resource_profiles.py
src/pix_framework/enhancement/: concurrency_oracle.py  multitasking.py  resource_availability.py
src/pix_framework/filesystem/: __init__.py  file_manager.py
src/pix_framework/io/: bpm_graph.py  bpmn.py  event_log.py
src/pix_framework/log_split/: log_split.py
src/pix_framework/statistics/: __init__.py  distribution.py  utils.py
src/pix_utils/: __init__.py  input.py  log_ids.py
src/pix_utils/calendar/: __init__.py  resource_calendar.py
src/pix_utils/filesystem/: file_manager.py
src/pix_utils/log_split/: log_split.py
src/pix_utils/statistics/: __init__.py  distribution.py  utils.py
src/prioritization_discovery/: __init__.py  rules.py
src/start_time_estimator/: concurrency_oracle.py  estimator.py  resource_availability.py
tests/batch_processing_discovery/: batch_characteristics_test.py  discovery_test.py  test_features_table.py
tests/batch_processing_discovery/assets/: event_log_2.csv  event_log_4.csv
tests/case_attribute_discovery/: test_case_attribute_discovery.py
tests/pix_framework/assets/: Arrival_test_fixed.csv  Arrival_test_normal.csv  PurchasingExample.csv  Resource_profiles_calendar_test.csv  Resource_profiles_test.csv  discrete_log.csv  math_log.csv  resource_calendars_crisp_sample.json  resource_calendars_fuzzy_sample.json
tests/pix_framework/calendar/: resource_calendar_test.py  test_resource_calendar.py
tests/pix_framework/discovery/: profile_resource_model_profile_differentiated.py  profile_resource_model_profile_pooled.py  test_calendar_factory.py  test_case_arrival.py  test_gateway_probabilities.py  test_resource_activity_performances.py  test_resource_calendars.py  test_resource_model.py  test_resource_model_benchmark.py  test_resource_pools.py  test_resource_profiles.py
tests/pix_framework/enhancement/: test_concurrency_oracle.py  test_multitasking.py  test_resource_availability.py
tests/pix_framework/io/: test_bpm_graph.py
tests/pix_framework/log_split/: log_split_test.py
tests/pix_framework/probabilistic_multitasking/: test_discovery.py  (+1 more)
tests/prioritization_discovery/: event_log_1.csv  test_discovery.py  test_rules.py
tests/start_time_estimator/: test_concurrency_oracle.py  test_estimate_start_times.py  test_event_log_4.csv  test_resource_availability.py
(+119 files in other folders)
