[tool.poetry]
name = "pix-framework"
version = "0.8.6"
description = "Process Improvement Explorer Framework contains process discovery and improvement modules of the Process Improvement Explorer project."
authors = ["David Chapela de la Campa <david.chapela.delacampa@gmail.com>", "Ihar Suvorau <ihar.suvorau@gmail.com>"]
readme = "README.md"
packages = [
    { include = "pix_framework", from = "src" },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pandas = "^2.0.1"
scipy = "^1.10.1"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit",
    "integration",
    "smoke",
]
