[tool.poetry]
name = "pix-framework"
version = "0.13.9"
description = "Process Improvement Explorer Framework contains process discovery and improvement modules of the Process Improvement Explorer project."
authors = [
    "David Chapela de la Campa <david.chapela.delacampa@gmail.com>",
    "Ihar Suvorau <ihar.suvorau@gmail.com>",
]
readme = "README.md"
packages = [{ include = "pix_framework", from = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pandas = "^2.0.1"
scipy = "^1.10.1"
pytz = "^2023.3"
networkx = "^3.1"
wittgenstein = "^0.3.4"
pandasql = "^0.7.3"
scikit-learn = "^1.3.0"
polars = "^0.18.15"
pyarrow = "^12.0.1"
lxml = "^4.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-benchmark = "^4.0.0"
snakeviz = "^2.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["unit", "integration", "smoke", "benchmark"]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
