[tool.poetry]
name = "pix-framework"
version = "0.14.0"
description = "Process Improvement Explorer Framework contains process discovery and improvement modules of the Process Improvement Explorer project."
authors = [
    "David Chapela de la Campa <david.chapela.delacampa@gmail.com>",
    "Ihar Suvorau <ihar.suvorau@gmail.com>",
]
readme = "README.md"
packages = [{ include = "pix_framework", from = "src" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pandas = "^2.2.3"
scipy = "^1.13.0"
pytz = "^2024.2"
networkx = "^3.1"
wittgenstein = "^0.3.4"
pandasql = "^0.7.3"
scikit-learn = "^1.5.2"
polars = "^1.8.0"
pyarrow = "^17.0.0"
lxml = "^5.3.0"
m5py = "^0.3.3"
optuna = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-benchmark = "^4.0.0"
snakeviz = "^2.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["unit", "integration", "smoke", "benchmark"]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
